// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"CStatArrow" should display corresponding icon for "type" prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-right: 1rem;
  position: relative;
}

.emotion-1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-weight: 500;
  font-size: 0.875rem;
}

.emotion-2 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1.5rem;
  vertical-align: baseline;
  font-weight: 600;
}

.emotion-3 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  opacity: 0.8;
  margin-bottom: 0.5rem;
}

.emotion-4 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.emotion-4:not(:root) {
  overflow: hidden;
}

.emotion-5 {
  width: 1em;
  height: 1em;
  display: inline-block;
  vertical-align: middle;
}

.emotion-6 {
  margin-right: 0.25rem;
  vertical-align: middle;
  color: #58c184;
}

<div
    class="emotion-0"
    data-chakra-component="CStat"
  >
    <p
      class="emotion-1"
      data-chakra-component="CStatLabel"
    >
      Sent
    </p>
    <p
      class="emotion-2"
      data-chakra-component="CStatNumber"
    >
      345,670
    </p>
    <p
      class="emotion-3"
      data-chakra-component="CStatHelperText"
    >
      <svg
        class="emotion-4 emotion-5 emotion-6"
        data-chakra-component="CStatArrow"
        role="presentation"
        viewBox="0 0 24 24"
      >
        
      
        <path
          d="M12.8,5.4c-0.377-0.504-1.223-0.504-1.6,0l-9,12c-0.228,0.303-0.264,0.708-0.095,1.047 C2.275,18.786,2.621,19,3,19h18c0.379,0,0.725-0.214,0.895-0.553c0.169-0.339,0.133-0.744-0.095-1.047L12.8,5.4z"
          fill="currentColor"
        />
        
    
      </svg>
      
            23.36%
          
    </p>
  </div>
</DocumentFragment>
`;

exports[`"CStatArrow" should display corresponding icon for "type" prop 2`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-right: 1rem;
  position: relative;
}

.emotion-1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-weight: 500;
  font-size: 0.875rem;
}

.emotion-2 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1.5rem;
  vertical-align: baseline;
  font-weight: 600;
}

.emotion-3 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  opacity: 0.8;
  margin-bottom: 0.5rem;
}

.emotion-4 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.emotion-4:not(:root) {
  overflow: hidden;
}

.emotion-5 {
  width: 1em;
  height: 1em;
  display: inline-block;
  vertical-align: middle;
}

.emotion-6 {
  margin-right: 0.25rem;
  vertical-align: middle;
  color: #dd3b4b;
}

<div
    class="emotion-0"
    data-chakra-component="CStat"
  >
    <p
      class="emotion-1"
      data-chakra-component="CStatLabel"
    >
      Sent
    </p>
    <p
      class="emotion-2"
      data-chakra-component="CStatNumber"
    >
      345,670
    </p>
    <p
      class="emotion-3"
      data-chakra-component="CStatHelperText"
    >
      <svg
        class="emotion-4 emotion-5 emotion-6"
        data-chakra-component="CStatArrow"
        role="presentation"
        viewBox="0 0 24 24"
      >
        
      
        <path
          d="M21,5H3C2.621,5,2.275,5.214,2.105,5.553C1.937,5.892,1.973,6.297,2.2,6.6l9,12 c0.188,0.252,0.485,0.4,0.8,0.4s0.611-0.148,0.8-0.4l9-12c0.228-0.303,0.264-0.708,0.095-1.047C21.725,5.214,21.379,5,21,5z"
          fill="currentColor"
        />
        
    
      </svg>
      
            23.36%
          
    </p>
  </div>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-right: 1rem;
  position: relative;
}

.emotion-1 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-weight: 500;
  font-size: 0.875rem;
}

.emotion-2 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1.5rem;
  vertical-align: baseline;
  font-weight: 600;
}

.emotion-3 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  opacity: 0.8;
  margin-bottom: 0.5rem;
}

<div
    class="emotion-0"
    data-chakra-component="CStat"
  >
    <p
      class="emotion-1"
      data-chakra-component="CStatLabel"
    >
      Collected Fees
    </p>
    <p
      class="emotion-2"
      data-chakra-component="CStatNumber"
    >
      £0.00
    </p>
    <p
      class="emotion-3"
      data-chakra-component="CStatHelperText"
    >
      Feb 12 - Feb 28
    </p>
  </div>
</DocumentFragment>
`;
